add supabase and clerck auth

--- a/src/index.css
+++ b/src/index.css
@@ -69,5 +69,5 @@
 }
 @font-face {
   font-family: "vazir";
-  src: url("../public/fonts/Vazirmatn-VariableFont_wght.ttf");
+  src: url("/fonts/Vazirmatn-VariableFont_wght.ttf");
 }
